src/objects/tgn__Test_Class__c.object
<CustomObject>
    <fields>
        <fullName>tgn__Apex_Class_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Apex Class Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tgn__Apex_Resource_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Apex Resource Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tgn__Async_Job_Id__c</fullName>
        <label>Async Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Code_Coverage__c</fullName>
        <label>Code Coverage</label>
        <precision>6</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tgn__Code_Length__c</fullName>
        <label>Code Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tgn__Code_Lines__c</fullName>
        <label>Code Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tgn__Debug_Log__c</fullName>
        <label>Debug Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tgn__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Error_Code__c</fullName>
        <label>Error Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tgn__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Generated_Date__c</fullName>
        <label>Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tgn__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Process_Time__c</fullName>
        <label>Process Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tgn__Scheduled_Job_Id__c</fullName>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tgn__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tgn__Test_Job_Id__c</fullName>
        <label>Test Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Tested_Date__c</fullName>
        <label>Tested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                    <label>Apex Class</label>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                    <label>Apex Trigger</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tgn__Validation__c</fullName>
        <label>Validation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Class</label>
    <nameField>
        <label>Test Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>